# omni-dev

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  PRESENTATION.html  README.md  SPIKE.md  build.rs  clippy.toml  deny.toml  flake.nix  glama.json  my-posts.jsonl  scratch
.claude/: settings.json  settings.local.json
.claude/commands/: commit-twiddle-debug.md  commit-twiddle-release.md  commit-twiddle.md  or-create-test.md  pr-create-debug.md  pr-create-release.md  pr-create.md  pr-update.md  twiddle-msg  twiddle-msg.md
.claude/hooks/: check-snapshots.sh  format-rust.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: adf-schema-drift.yml  ci.yml  commit-check.yml  release.yml  voice-streaming-keepup.yml  vscode-extension-release.yml  vscode-extension.yml  website.yml
.omni-dev/: commit-guidelines.md  pr-guidelines.md  scopes.yaml
assets/adf-schema/: README.md  provenance.json
assets/social-preview/: README.md
baseline/: Cargo.toml  content_words.txt  short_en.expected.txt
baseline/moonshine_mlx/: README.md  requirements.txt  run.py  run_streaming.py
baseline/parakeet_mlx/: README.md  requirements.txt  run.py  streaming_probe.py
baseline/src/: events.rs  idle.rs  lib.rs  wer.rs
deploy/webhook-buffer/: .gitignore  README.md  package.json  verify-fields.mjs  worker.js  wrangler.toml
docs/: README.md  RELEASE.md  STYLE_GUIDE.md  ai-backends.md  ascii-cinema.md  asr-backends.md  bedrock-integration.md  browser-bridge.md  ci-path-split.md  configuration-best-practices.md  configuration.md  coverage.md  datadog.md  examples.md  getting-started.md  glama-listing.md  local-overrides.md  log.md  mcp.md  omni-dev-directory.md  omni-dev-hn-post.txt  retrospective-v0.18.0.md  sessions-service.md  shell-completion.md  snowflake-service.md  transcript.md  troubleshooting.md  user-guide.md  why-jfm.md  worktrees-service.md
docs/adrs/: README.md  adr-0000.md  adr-0001.md  adr-0002.md  adr-0003.md  adr-0004.md  adr-0005.md  adr-0006.md  adr-0007.md  adr-0008.md  adr-0009.md  adr-0010.md  adr-0011.md  adr-0012.md  adr-0013.md  adr-0014.md  adr-0015.md  adr-0016.md  adr-0017.md  adr-0018.md  adr-0019.md  adr-0020.md  adr-0021.md  adr-0022.md  adr-0023.md  adr-0024.md  adr-0025.md  adr-0026.md  adr-0027.md  adr-0028.md  adr-0029.md  adr-0030.md  adr-0031.md  adr-0032.md  adr-0033.md  adr-0034.md  adr-0035.md  adr-0036.md  adr-0037.md  adr-0038.md  (+17 more)
docs/contributing/: README.md  adding-an-ai-backend.md  adding-an-mcp-tool.md  extending-the-adf-schema.md
docs/plan/: AiClient.md  commit-message-check.md  config-internals.md  help-all-command.md  jfm.md  limitations.md  pr-creation.md  pr-poll-cost-spike.md  project.md  twiddle.md  webhook-buffer-spike.md  windows-daemon-port.md
docs/recipes/: browser-bridge-facebook.md
docs/specs/: jfm.md
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
proptest-regressions/data/: amendments.txt
scripts/: analyze.py  build.sh  convert_parakeet_weights.py  coverage-comment.sh  install-vscode-extension.sh
spike-candle/: Cargo.toml
spike-candle-streaming/: Cargo.toml
spike-candle-streaming/src/: main.rs
spike-candle/src/: main.rs
spike-parakeet-rust/: .gitignore  Cargo.toml  compare_parity.py  convert_weights.py  dump_reference.py
spike-parakeet-rust/src/: main.rs
spike-tract-zipformer/: Cargo.toml
spike-tract-zipformer/src/: main.rs  probe.rs
spike-voxtral/: .gitignore  README.md  anchor_batch.py  parse_results.py  requirements.txt  run_voxtral.py  smoke.py
spike-voxtral/canonical/: scandal_in_bohemia.txt
spike-voxtral/voxtral_c/: NOTES.md
src/: atlassian.rs  build_info.rs  claude.rs  cli.rs  core.rs  daemon.rs  data.rs  datadog.rs  git.rs  github_metrics.rs  github_rate_limit.rs  lib.rs  main.rs  mcp.rs  mcp_server.rs  pr_status.rs  request_log.rs  resources.rs  sessions.rs  snowflake.rs  test_support.rs  transcript.rs  utils.rs  voice.rs  webhook_buffer.rs  worktrees.rs
src/atlassian/: adf.rs  adf_attr_schema.rs  adf_hints.rs  adf_mark_schema.rs  adf_schema.rs  adf_validated.rs  api.rs  attrs.rs  auth.rs  client.rs  confluence_api.rs  confluence_types.rs  convert.rs  create.rs  custom_fields.rs  diff.rs  diff_format.rs  directive.rs  document.rs  error.rs  inline_comment.rs  jira_api.rs  jira_types.rs  transition_fields.rs
src/browser/: auth.rs  bridge.rs  client.rs  mod.rs  protocol.rs  snippet.rs
src/claude/: ai.rs  ai_client.rs  backend.rs  batch.rs  bedrock.rs  bedrock_ai_client.rs  claude_ai_client.rs  client.rs  context.rs  diff_pack.rs  error.rs  mod.rs  model_config.rs  prompts.rs  provider.rs  response_schema.rs  test_utils.rs  token_budget.rs
src/cli/: ai.rs  browser.rs  commands.rs  completions.rs  config.rs  coverage.rs  daemon.rs  datadog.rs  format.rs  git.rs  help.rs  log.rs  mod.rs  resources.rs  sessions.rs  snowflake.rs  transcript.rs  voice.rs  worktrees.rs
src/config/: mod.rs
src/coverage/: analysis.rs  cobertura.rs  diff.rs  format.rs  lcov.rs  llvm_json.rs  mod.rs  model.rs  render.rs
src/daemon/: client.rs  launchd.rs  lifecycle.rs  mod.rs  paths.rs  protocol.rs  registry.rs  selection.rs  server.rs  service.rs  services.rs  single_instance.rs  systemd.rs  testutil.rs  tray.rs
src/data/: amendments.rs  check.rs  (+3 more)
tests/: adf_schema_drift_bin_test.rs  adf_schema_test.rs  browser_bridge_test.rs  coverage_diff_test.rs  daemon_socket.rs  daemon_test.rs  integration_test.rs  mcp_integration_test.rs  voice_enroll_speaker_test.rs  voice_reflect_cli_test.rs  voice_reflect_test.rs  voice_review_cli_test.rs  voice_review_test.rs  voice_streaming_candle_test.rs  voice_transcribe_candle_test.rs  voice_transcribe_cli_test.rs  voice_transcribe_parakeet_test.rs  voice_transcribe_test.rs  voice_transcribe_voxtral_mlx_test.rs  voice_transcribe_voxtral_test.rs
voxtral-sys/: Cargo.toml  build.rs
voxtral-sys/src/: lib.rs
website/: README.md  config.toml
(+384 files in other folders)
