[workspace]
# The root `omni-dev` package is also the workspace root. `voxtral-sys` (the
# pure-C Voxtral FFI engine, #933 / ADR-0037) is a standalone member: it is
# built and tested in CI via `cargo build/test -p voxtral-sys` but is NOT yet a
# dependency of omni-dev. Wiring the omni-dev -> voxtral-sys edge (and the
# crates.io publish-flow change it forces) lands in #933 Phase 3 with the
# `VoxtralBackend`. Keeping it un-wired here keeps `cargo publish` of omni-dev
# working (an optional path-dep with no registry version would break it).
members = ["voxtral-sys"]
resolver = "2"

[package]
name = "omni-dev"
version = "0.28.0"
edition = "2021"
authors = ["John Ky <newhoggy@gmail.com>"]
license = "BSD-3-Clause"
description = "A powerful Git commit message analysis and amendment toolkit"
repository = "https://github.com/rust-works/omni-dev"
homepage = "https://github.com/rust-works/omni-dev"
documentation = "https://docs.rs/omni-dev"
readme = "README.md"
keywords = ["git", "commit", "conventional-commits", "development", "cli"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.80.0"
# Keep the published crate under crates.io's 10 MiB upload limit by dropping
# assets that consumers of the library/binary do not need: the promo website,
# social-preview images, scratch space, and the large binary voice fixtures
# used only by the test suite (which crates.io consumers never run).
exclude = [
    "website/",
    "assets/",
    "scratch/",
    "tests/fixtures/voice/",
    # `voxtral-sys` is a separate crate (its own vendored C); it must not be
    # bundled inside the omni-dev crates.io tarball.
    "voxtral-sys/",
]

[dependencies]
clap = { version = "4.6", features = ["derive", "color"] }
clap_complete = "4.6"
git2 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
yaml-rust-davvid = "0.6"
serde_json = "1.0"
termcolor = "1.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.27"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
tokio = { version = "1.52", features = ["full"] }
axum = "0.8"
tokio-tungstenite = "0.24"
rand = "0.8"
thiserror = "2.0"
async-trait = "0.1"
regex = "1.12.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6.0.0"
globset = "0.4"
crossterm = "0.29"
url = "2.5.8"
base64 = "0.22"
futures = "0.3"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"], optional = true }
schemars = "1.2"
similar = "3.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
mime_guess = "2"
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
cpal = "0.17"
rubato = "3.0"
hound = "3.5"
signal-hook = "0.4"
ringbuf = "0.5"
ulid = { version = "1", features = ["serde"] }
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "rustls-tls"] }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
byteorder = "1"
tract-onnx = "0.22"
rustfft = "6"
ureq = "3"
quick-xml = "0.40.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["signal"] }

# Native Voxtral ASR engine (#933 / ADR-0037), enabled by the `voxtral` feature.
# Target-gated to non-Windows so the Windows dependency graph never references it
# (the `voxtral-windows-gating` CI guard asserts this). It is a path dependency
# with NO version and `voxtral-sys` stays `publish = false`: per the #933 Phase 3
# decision we wire the edge but DEFER publishing. Consequence — and this is
# intentional, not a bug — `cargo publish` of omni-dev is blocked while this edge
# exists (an optional path dep must resolve to a registry version at publish
# time). A future release resolves it by publishing voxtral-sys to crates.io and
# adding a release.yml step; see docs/RELEASE.md.
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
voxtral-sys = { path = "voxtral-sys", optional = true }

# Apple MLX (`mlx-rs`) for the real-time INT4 Voxtral backend (ADR-0039), enabled
# by the `voxtral-mlx` feature. Gated to macOS Apple Silicon only — MLX is
# Apple-only, and `mlx-rs` builds the MLX C++ core from source via CMake. This
# stanza keeps `mlx-rs` (and that toolchain) out of the Windows/Linux/Intel-macOS
# and default graphs; a CI guard asserts its absence, like `voxtral-sys`.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
mlx-rs = { version = "0.21", optional = true }

[features]
mcp = ["dep:rmcp"]
# Off-by-default native Voxtral ASR backend (#933, ADR-0037). Platform-gated:
# the native engine is permitted only behind a Rust FFI boundary on
# `cfg(not(target_os = "windows"))`; on Windows and in default (feature-off)
# builds, requesting `--backend voxtral` is a clear construction-time error,
# never a build break. Enabling it pulls the `voxtral-sys` FFI crate (vendored
# `antirez/voxtral.c`), declared under the target-gated stanza below so it is
# never referenced on Windows. As a declared Cargo feature, `voxtral` is
# auto-known to the `unexpected_cfgs` check (unlike the custom `online_tests`
# cfg below), so no check-cfg entry is needed for `cfg(feature = "voxtral")`.
voxtral = ["dep:voxtral-sys"]
# Off-by-default real-time INT4 Voxtral backend via Apple MLX (`mlx-rs`), per
# ADR-0039. Apple-Silicon-only: `mlx-rs` is declared under the macOS-aarch64
# target stanza below, so it (and its C++/CMake MLX build) never enters any other
# target's graph. Enabling it on macOS-arm64 pulls a CMake + C++ toolchain
# requirement — the cost ADR-0039 narrowly permits, for this backend only.
voxtral-mlx = ["dep:mlx-rs"]

[dev-dependencies]
tempfile = "3.27"
insta = { version = "1.47", features = ["filters"] }
proptest = "1"
wiremock = "0.6"
rmcp = { version = "1.7", features = ["client", "server", "transport-io", "macros"] }

[lib]
name = "omni_dev"
path = "src/lib.rs"

[[bin]]
name = "omni-dev"
path = "src/main.rs"
required-features = []

[[bin]]
name = "omni-dev-mcp"
path = "src/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "adf-schema-drift"
path = "src/bin/adf_schema_drift.rs"
required-features = []

[[bin]]
name = "adf-schema-codegen"
path = "src/bin/adf_schema_codegen.rs"
required-features = []

[lints.rust]
unsafe_code = "deny"
# Custom cfgs declared so `cargo check`/`cargo test` don't warn on them.
# `online_tests` gates network-dependent tests that hit real services
# (currently: youtube.com); it is *not* a cargo feature so `--all-features`
# does not enable it. Run with `RUSTFLAGS='--cfg online_tests' cargo test`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(online_tests)'] }

[lints.clippy]
# Lint groups (priority -1 so individual overrides win)
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# ── Pedantic: too noisy / low signal ─────────────────────────────────
must_use_candidate      = "allow"
module_name_repetitions = "allow"

# ── Pedantic: documentation (defer to follow-up) ────────────────────
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
doc_markdown            = "allow"

# ── Pedantic: public API stability ───────────────────────────────────
unused_self             = "allow"  # removing &self is an API change
unnecessary_wraps       = "allow"  # removing Result is an API change
needless_pass_by_value  = "allow"  # changing to &T is an API change
ref_option              = "allow"  # changing &Option<T> to Option<&T> is an API change

# ── Pedantic: stylistic ─────────────────────────────────────────────
if_not_else             = "allow"
similar_names           = "allow"
too_many_lines          = "allow"  # covered by STYLE-0017
format_push_string      = "allow"  # write! alternative requires unwrap
unused_async            = "allow"  # some async fns are async for API consistency
items_after_statements  = "allow"  # sometimes clearer to declare near use
struct_field_names      = "allow"  # naming convention matches domain
struct_excessive_bools  = "allow"  # config structs use bool flags

# ── Pedantic: numeric casts ─────────────────────────────────────────
cast_precision_loss      = "allow"  # token/char counts within safe ranges
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"

# ── Pedantic: file system ───────────────────────────────────────────
case_sensitive_file_extension_comparisons = "allow"  # risky auto-fix

# ── Restriction: panicking operations (STYLE-0003) ────────────────────
unwrap_used  = "warn"
expect_used  = "warn"

# ── Nursery ──────────────────────────────────────────────────────────
option_if_let_else           = "allow"  # often less readable than if-let
redundant_pub_crate          = "allow"  # conflicts with STYLE-0005
missing_const_for_fn         = "allow"
or_fun_call                  = "allow"  # false positives
significant_drop_tightening  = "allow"  # often produces wrong suggestions
large_stack_frames           = "allow"  # fires on test fns with large fixture literals; no usable span
large_stack_arrays           = "allow"  # ditto — fixture arrays in tests
