[package]
name = "omni-dev"
version = "0.34.0"
edition = "2021"
authors = ["John Ky <newhoggy@gmail.com>"]
license = "BSD-3-Clause"
description = "AI-powered git commit rewriter, PR generator, and MCP server for Jira, Confluence, and Datadog."
repository = "https://github.com/rust-works/omni-dev"
homepage = "https://github.com/rust-works/omni-dev"
documentation = "https://docs.rs/omni-dev"
readme = "README.md"
keywords = ["git", "ai", "claude", "mcp", "conventional-commits"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.80.0"
# Keep the published crate under crates.io's 10 MiB upload limit by dropping
# assets that consumers of the library/binary do not need: the promo website,
# social-preview images, scratch space, and the VS Code companion extension
# (a Node/TypeScript deliverable published separately to the Marketplace).
exclude = [
    "website/",
    "assets/",
    "scratch/",
    "editors/",
]

[dependencies]
clap = { version = "4.6", features = ["derive", "color"] }
clap_complete = "4.6"
git2 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
yaml-rust-davvid = "0.6"
serde_json = "1.0"
termcolor = "1.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.27"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
tokio = { version = "1.52", features = ["full"] }
axum = "0.8"
tokio-tungstenite = "0.29"
rand = "0.10"
thiserror = "2.0"
async-trait = "0.1"
regex = "1.12.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6.0.0"
globset = "0.4"
crossterm = "0.29"
url = "2.5.8"
base64 = "0.22"
futures = "0.3"
rmcp = { version = "2.1", features = ["server", "transport-io", "macros"], optional = true }
schemars = "1.2"
similar = "3.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
mime_guess = "2"
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
# RSA signing for Snowflake key-pair (RS256) JWT auth. Already in the tree via
# rustls; a direct dep pins it. Deliberately not the `rsa` crate (RUSTSEC-2023-0071
# Marvin advisory + edition-2024 MSRV bump — the reasons #1003 dropped
# snowflake-connector-rs).
aws-lc-rs = "1.16"
ureq = "3"
quick-xml = "0.41"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["fs", "hostname", "signal", "user"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Menu-bar tray deps (enabled by the `menu-bar` feature). `muda` (the menu
# library) is used via tray-icon's `tray_icon::menu` re-export, so it is not a
# direct dependency. `tao` provides the main-thread macOS event loop the tray
# requires; `arboard` backs the "Copy console snippet" clipboard action.
arboard = { version = "3.6.1", optional = true }
tao = { version = "0.35.3", optional = true }
tray-icon = { version = "0.24.1", optional = true }

[features]
mcp = ["dep:rmcp"]
# macOS menu-bar tray for the daemon. Off by default; the tray deps are
# macOS-only (see the `[target.'cfg(target_os = "macos")']` table) and the tray
# code is additionally gated on `cfg(target_os = "macos")`, so enabling this on
# another platform is a no-op.
menu-bar = ["dep:tray-icon", "dep:tao", "dep:arboard"]

[dev-dependencies]
anyhow = "1.0"
async-trait = "0.1"
tempfile = "3.27"
insta = { version = "1.47", features = ["filters"] }
proptest = "1"
wiremock = "0.6"
rmcp = { version = "2.1", features = ["client", "server", "transport-io", "macros"] }

[lib]
name = "omni_dev"
path = "src/lib.rs"

[[bin]]
name = "omni-dev"
path = "src/main.rs"
required-features = []

[[bin]]
name = "omni-dev-mcp"
path = "src/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "adf-schema-drift"
path = "src/bin/adf_schema_drift.rs"
required-features = []

[[bin]]
name = "adf-schema-codegen"
path = "src/bin/adf_schema_codegen.rs"
required-features = []

[lints.rust]
unsafe_code = "deny"
# Custom cfgs declared so `cargo check`/`cargo test` don't warn on them.
# `online_tests` gates network-dependent tests that hit real services
# (currently: youtube.com); it is *not* a cargo feature so `--all-features`
# does not enable it. Run with `RUSTFLAGS='--cfg online_tests' cargo test`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(online_tests)'] }

[lints.clippy]
# Lint groups (priority -1 so individual overrides win)
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# ── Pedantic: too noisy / low signal ─────────────────────────────────
must_use_candidate      = "allow"
module_name_repetitions = "allow"

# ── Pedantic: documentation (defer to follow-up) ────────────────────
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
doc_markdown            = "allow"

# ── Pedantic: public API stability ───────────────────────────────────
unused_self             = "allow"  # removing &self is an API change
unnecessary_wraps       = "allow"  # removing Result is an API change
needless_pass_by_value  = "allow"  # changing to &T is an API change
ref_option              = "allow"  # changing &Option<T> to Option<&T> is an API change

# ── Pedantic: stylistic ─────────────────────────────────────────────
if_not_else             = "allow"
similar_names           = "allow"
too_many_lines          = "allow"  # covered by STYLE-0017
format_push_string      = "allow"  # write! alternative requires unwrap
unused_async            = "allow"  # some async fns are async for API consistency
items_after_statements  = "allow"  # sometimes clearer to declare near use
struct_field_names      = "allow"  # naming convention matches domain
struct_excessive_bools  = "allow"  # config structs use bool flags

# ── Pedantic: numeric casts ─────────────────────────────────────────
cast_precision_loss      = "allow"  # token/char counts within safe ranges
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"

# ── Pedantic: file system ───────────────────────────────────────────
case_sensitive_file_extension_comparisons = "allow"  # risky auto-fix

# ── Restriction: panicking operations (STYLE-0003) ────────────────────
unwrap_used  = "warn"
expect_used  = "warn"

# ── Nursery ──────────────────────────────────────────────────────────
option_if_let_else           = "allow"  # often less readable than if-let
redundant_pub_crate          = "allow"  # conflicts with STYLE-0005
missing_const_for_fn         = "allow"
or_fun_call                  = "allow"  # false positives
significant_drop_tightening  = "allow"  # often produces wrong suggestions
large_stack_frames           = "allow"  # fires on test fns with large fixture literals; no usable span
large_stack_arrays           = "allow"  # ditto — fixture arrays in tests
