[package]
name = "spike-candle-streaming"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "spike-candle-streaming"
path = "src/main.rs"

[dependencies]
anyhow = "1"
byteorder = "1"
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
clap = { version = "4.6", features = ["derive"] }
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
ulid = { version = "1", features = ["serde"] }
baseline = { path = "../baseline" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
