[package]
name = "spike-candle"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
byteorder = "1"
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
hound = "3.5"
serde_json = "1"
tokenizers = { version = "0.22", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
