[package]
name = "spike-parakeet-rust"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
safetensors = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
ndarray-npy = "0.9"
